fixed link wrap on error page, changed order of logo icons

--- a/dev/styles/partials/_error.scss
+++ b/dev/styles/partials/_error.scss
@@ -37,3 +37,10 @@
 	background-size: cover;
 	position: relative;
 }
+
+.portfolioSection__link--break {
+	display: none;
+	@include bp(med) {
+		display: inline;
+	}
+}
