--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -45,7 +45,6 @@ nav {
 }
 
 .overlay {
-	position: absolute;
 	left: 0;
 	top: 0;
 	background-color: rgba(239,209,198, 0.5);
